tests/snapshots/test_editorconfig__empty_root.snap
---
source: tests/test_editorconfig.rs
expression: "format(&contents, path.to_str().unwrap())"
input_file: tests/inputs-editorconfig/empty-root/tab-double.lua
---
local foo = {
	a = 1,
}

local bar = ""

