tests/snapshots/test_editorconfig__empty_root@tab-double.lua.snap
---
source: tests/test_editorconfig.rs
expression: "format(&contents, path.to_str().unwrap())"
---
local foo = {
	a = 1,
}

local bar = ""

