tests/snapshots/test_editorconfig__global.snap
---
source: tests/test_editorconfig.rs
assertion_line: 45
expression: "format(&contents, path.to_str().unwrap())"
input_file: tests/inputs-editorconfig/global/tab-single.lua
---
local foo = {
	a = 1,
}

local bar = ''

unpack {}

