tests/snapshots/test_editorconfig__global@tab-single.lua.snap
---
source: tests/test_editorconfig.rs
expression: "format(&contents, path.to_str().unwrap())"
---
local foo = {
	a = 1,
}

local bar = ''

