tests/snapshots/test_editorconfig__local.snap
---
source: tests/test_editorconfig.rs
expression: "format(&contents, path.to_str().unwrap())"
input_file: tests/inputs-editorconfig/local/space-4.lua
---
local foo = {
    a = 1,
}

local bar = ""

