tests/snapshots/test_editorconfig__local@space-4.lua.snap
---
source: tests/test_editorconfig.rs
expression: "format(&contents, path.to_str().unwrap())"
---
local foo = {
    a = 1,
}

local bar = ""

