tests/snapshots/test_editorconfig__root.snap
---
source: tests/test_editorconfig.rs
expression: "format(&contents, path.to_str().unwrap())"
input_file: tests/inputs-editorconfig/space-2.lua
---
local foo = {
  a = 1,
}

local bar = ""

