tests/snapshots/test_editorconfig__stylua_toml@single-space-8.lua.snap
---
source: tests/test_editorconfig.rs
expression: "&contents"
---
local foo = {
        a = 1,
}

local bar = ''

